fix select box is not above menu on mobile screen

--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -45,7 +45,6 @@
   }
 
   select#lang {
-    display: inline;
     float: right;
     margin-top: 0.3em;
     margin-right: em(16);
